# collabapp

./: .gitignore  .terraform.lock.hcl  README.md  gulpfile.js  lambda.sh  main.tf  package.json  pnpm-lock.yaml  pyproject.toml  terraform.tfstate  terraform.tfstate.backup  turbo.json
collab/: app.py  dynamo.py
frontend/: .env  package.json  pnpm-lock.yaml  terraform.tfstate  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts
frontend/src/components/: Button.vue  CreateView.vue  EditDoc.vue  EditView.vue  Editor.vue  Input.vue  ShareModal.vue
scripts/: dynamo.py
terraform.tfstate.d/dev/: terraform.tfstate  terraform.tfstate.backup
