[tool.poetry]
name = "collab"
version = "0.1.0"
description = ""
authors = ["Lachlan Miller <lachlan.miller.1990@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}
mangum = "^0.19.0"
jinja2 = "^3.1.4"
markupsafe = "^3.0.2"
pynamodb = "^6.0.1"
boto3 = "^1.35.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
